--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand text-warning" href="#">Roshan Sunuwar</a>
+            <a class="navbar-brand text-warning" href="#">SUNUWAR</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -46,7 +46,7 @@
     <!-- Footer Section -->
     <footer class="bg-dark text-white text-center py-3">
         <div class="container">
-            <p>&copy; 2023 Roshan Sunuwar. All rights reserved.</p>
+            <p>&copy; 2023 Sunuwar. All rights reserved.</p>
         </div>
     </footer>
 
